--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.4.0",
 		"@fortawesome/react-fontawesome": "^0.2.0",
 		"axios": "^1.4.0",
+		"dayjs": "^1.11.8",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-multi-carousel": "^2.8.4",
